test/src/e2e_vm_tests/test_programs/should_pass/language/main_args/main_args_two_u64/src/main.sw
script;

fn main(baba: u64, keke: u64) -> u64 {
    baba + keke
}
