test/src/e2e_vm_tests/test_programs/should_fail/configurables_initializer_not_const_eval/src/main.sw
script;

fn not_const_eval() -> u64 {
    asm() { fp: u64 }
}

configurable {
    CONFIG: u64 = not_const_eval(),
}

fn main() {}